// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Combobox snapshot should match snapshot label 1`] = `
<Combobox
  items={
    Array [
      Object {
        "items": Array [
          Object {
            "key": "key1",
            "label": "item1",
          },
          Object {
            "key": "key2",
            "label": "item2",
          },
          Object {
            "key": "key3",
            "label": "item3",
          },
          Object {
            "key": "key4",
            "label": "menu1",
          },
          Object {
            "key": "key5",
            "label": "menu2",
          },
          Object {
            "key": "key6",
            "label": "menu3",
          },
        ],
        "section": "",
      },
    ]
  }
  label="combobox_label"
>
  <div
    className="md-combobox-label"
  >
    combobox_label
  </div>
  <div
    className="md-combobox-wrapper"
    style={
      Object {
        "--local-width": "16.25rem",
      }
    }
  >
    <div
      className="md-combobox-inputSection"
    >
      <Input
        aria-label="md-combobox-input"
        ariaDescribedBy={null}
        ariaLabel={null}
        autoComplete="off"
        className="md-combobox-input"
        clear={false}
        clearAriaLabel={null}
        containerSize=""
        defaultValue=""
        disabled={false}
        helpText=""
        htmlId={null}
        id={null}
        inputAfter={null}
        inputBefore={null}
        inputClassName=""
        inputRef={[Function]}
        inputSize=""
        isFilled={false}
        label=""
        messageArr={Array []}
        multiline={false}
        name={null}
        nestedLevel={0}
        onChange={[Function]}
        onDoneEditing={null}
        onFocus={null}
        onKeyDown={null}
        onMouseDown={null}
        placeholder="Search or select an option"
        readOnly={false}
        secondaryLabel=""
        shape=""
        type="text"
        value=""
      >
        <div
          className="md-input-container md-combobox-input"
        >
          <div
            className="md-input__wrapper"
          >
            <input
              aria-label="md-combobox-input"
              autoComplete="off"
              className="md-input"
              name={null}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              placeholder="Search or select an option"
              tabIndex={0}
              type="text"
              value=""
            />
          </div>
        </div>
      </Input>
      <div
        className="md-combobox-divider"
      />
      <ButtonPill
        className="md-combobox-button"
        ghost={true}
        onPress={[Function]}
      >
        <ButtonSimple
          className="md-button-pill-wrapper md-combobox-button"
          data-color="primary"
          data-disabled={false}
          data-ghost={true}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          onPress={[Function]}
        >
          <FocusRing>
            <FocusRing
              focusClass="md-focus-ring-wrapper children"
              focusRingClass="md-focus-ring-wrapper children"
            >
              <button
                className="md-button-pill-wrapper md-combobox-button md-button-simple-wrapper"
                data-color="primary"
                data-disabled={false}
                data-ghost={true}
                data-grown={false}
                data-inverted={false}
                data-outline={false}
                data-shallow-disabled={false}
                data-size={40}
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                type="button"
              >
                <Icon
                  className="md-combobox-arrowIcon"
                  name="arrow-down"
                  scale={12}
                  weight="filled"
                >
                  <div
                    className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-combobox-arrowIcon md-icon-no-shrink"
                  >
                    <svg
                      className=""
                      data-autoscale={false}
                      data-scale={12}
                      data-test="arrow-down"
                      fill="currentColor"
                      height="100%"
                      style={Object {}}
                      viewBox="0, 0, 32, 32"
                      width="100%"
                    />
                  </div>
                </Icon>
              </button>
            </FocusRing>
          </FocusRing>
        </ButtonSimple>
      </ButtonPill>
    </div>
  </div>
</Combobox>
`;

exports[`Combobox snapshot should match snapshot with className 1`] = `
<Combobox
  className="example-class"
  items={
    Array [
      Object {
        "items": Array [
          Object {
            "key": "key1",
            "label": "item1",
          },
          Object {
            "key": "key2",
            "label": "item2",
          },
          Object {
            "key": "key3",
            "label": "item3",
          },
          Object {
            "key": "key4",
            "label": "menu1",
          },
          Object {
            "key": "key5",
            "label": "menu2",
          },
          Object {
            "key": "key6",
            "label": "menu3",
          },
        ],
        "section": "",
      },
    ]
  }
>
  <div
    className="example-class md-combobox-wrapper"
    style={
      Object {
        "--local-width": "16.25rem",
      }
    }
  >
    <div
      className="md-combobox-inputSection"
    >
      <Input
        aria-label="md-combobox-input"
        ariaDescribedBy={null}
        ariaLabel={null}
        autoComplete="off"
        className="md-combobox-input"
        clear={false}
        clearAriaLabel={null}
        containerSize=""
        defaultValue=""
        disabled={false}
        helpText=""
        htmlId={null}
        id={null}
        inputAfter={null}
        inputBefore={null}
        inputClassName=""
        inputRef={[Function]}
        inputSize=""
        isFilled={false}
        label=""
        messageArr={Array []}
        multiline={false}
        name={null}
        nestedLevel={0}
        onChange={[Function]}
        onDoneEditing={null}
        onFocus={null}
        onKeyDown={null}
        onMouseDown={null}
        placeholder="Search or select an option"
        readOnly={false}
        secondaryLabel=""
        shape=""
        type="text"
        value=""
      >
        <div
          className="md-input-container md-combobox-input"
        >
          <div
            className="md-input__wrapper"
          >
            <input
              aria-label="md-combobox-input"
              autoComplete="off"
              className="md-input"
              name={null}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              placeholder="Search or select an option"
              tabIndex={0}
              type="text"
              value=""
            />
          </div>
        </div>
      </Input>
      <div
        className="md-combobox-divider"
      />
      <ButtonPill
        className="md-combobox-button"
        ghost={true}
        onPress={[Function]}
      >
        <ButtonSimple
          className="md-button-pill-wrapper md-combobox-button"
          data-color="primary"
          data-disabled={false}
          data-ghost={true}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          onPress={[Function]}
        >
          <FocusRing>
            <FocusRing
              focusClass="md-focus-ring-wrapper children"
              focusRingClass="md-focus-ring-wrapper children"
            >
              <button
                className="md-button-pill-wrapper md-combobox-button md-button-simple-wrapper"
                data-color="primary"
                data-disabled={false}
                data-ghost={true}
                data-grown={false}
                data-inverted={false}
                data-outline={false}
                data-shallow-disabled={false}
                data-size={40}
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                type="button"
              >
                <Icon
                  className="md-combobox-arrowIcon"
                  name="arrow-down"
                  scale={12}
                  weight="filled"
                >
                  <div
                    className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-combobox-arrowIcon md-icon-no-shrink"
                  >
                    <svg
                      className=""
                      data-autoscale={false}
                      data-scale={12}
                      data-test="arrow-down"
                      fill="currentColor"
                      height="100%"
                      style={Object {}}
                      viewBox="0, 0, 32, 32"
                      width="100%"
                    />
                  </div>
                </Icon>
              </button>
            </FocusRing>
          </FocusRing>
        </ButtonSimple>
      </ButtonPill>
    </div>
  </div>
</Combobox>
`;

exports[`Combobox snapshot should match snapshot with noResultText 1`] = `
<Combobox
  items={
    Array [
      Object {
        "items": Array [
          Object {
            "key": "key1",
            "label": "item1",
          },
          Object {
            "key": "key2",
            "label": "item2",
          },
          Object {
            "key": "key3",
            "label": "item3",
          },
          Object {
            "key": "key4",
            "label": "menu1",
          },
          Object {
            "key": "key5",
            "label": "menu2",
          },
          Object {
            "key": "key6",
            "label": "menu3",
          },
        ],
        "section": "",
      },
    ]
  }
  noResultText="No result"
>
  <div
    className="md-combobox-wrapper"
    style={
      Object {
        "--local-width": "16.25rem",
      }
    }
  >
    <div
      className="md-combobox-inputSection"
    >
      <Input
        aria-label="md-combobox-input"
        ariaDescribedBy={null}
        ariaLabel={null}
        autoComplete="off"
        className="md-combobox-input"
        clear={false}
        clearAriaLabel={null}
        containerSize=""
        defaultValue=""
        disabled={false}
        helpText=""
        htmlId={null}
        id={null}
        inputAfter={null}
        inputBefore={null}
        inputClassName=""
        inputRef={[Function]}
        inputSize=""
        isFilled={false}
        label=""
        messageArr={Array []}
        multiline={false}
        name={null}
        nestedLevel={0}
        onChange={[Function]}
        onDoneEditing={null}
        onFocus={null}
        onKeyDown={null}
        onMouseDown={null}
        placeholder="Search or select an option"
        readOnly={false}
        secondaryLabel=""
        shape=""
        type="text"
        value=""
      >
        <div
          className="md-input-container md-combobox-input"
        >
          <div
            className="md-input__wrapper"
          >
            <input
              aria-label="md-combobox-input"
              autoComplete="off"
              className="md-input"
              name={null}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              placeholder="Search or select an option"
              tabIndex={0}
              type="text"
              value=""
            />
          </div>
        </div>
      </Input>
      <div
        className="md-combobox-divider"
      />
      <ButtonPill
        className="md-combobox-button"
        ghost={true}
        onPress={[Function]}
      >
        <ButtonSimple
          className="md-button-pill-wrapper md-combobox-button"
          data-color="primary"
          data-disabled={false}
          data-ghost={true}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          onPress={[Function]}
        >
          <FocusRing>
            <FocusRing
              focusClass="md-focus-ring-wrapper children"
              focusRingClass="md-focus-ring-wrapper children"
            >
              <button
                className="md-button-pill-wrapper md-combobox-button md-button-simple-wrapper"
                data-color="primary"
                data-disabled={false}
                data-ghost={true}
                data-grown={false}
                data-inverted={false}
                data-outline={false}
                data-shallow-disabled={false}
                data-size={40}
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                type="button"
              >
                <Icon
                  className="md-combobox-arrowIcon"
                  name="arrow-down"
                  scale={12}
                  weight="filled"
                >
                  <div
                    className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-combobox-arrowIcon md-icon-no-shrink"
                  >
                    <svg
                      className=""
                      data-autoscale={false}
                      data-scale={12}
                      data-test="arrow-down"
                      fill="currentColor"
                      height="100%"
                      style={Object {}}
                      viewBox="0, 0, 32, 32"
                      width="100%"
                    />
                  </div>
                </Icon>
              </button>
            </FocusRing>
          </FocusRing>
        </ButtonSimple>
      </ButtonPill>
    </div>
  </div>
</Combobox>
`;

exports[`Combobox snapshot should match snapshot with placeholder 1`] = `
<Combobox
  items={
    Array [
      Object {
        "items": Array [
          Object {
            "key": "key1",
            "label": "item1",
          },
          Object {
            "key": "key2",
            "label": "item2",
          },
          Object {
            "key": "key3",
            "label": "item3",
          },
          Object {
            "key": "key4",
            "label": "menu1",
          },
          Object {
            "key": "key5",
            "label": "menu2",
          },
          Object {
            "key": "key6",
            "label": "menu3",
          },
        ],
        "section": "",
      },
    ]
  }
  placeholder="Combobox"
>
  <div
    className="md-combobox-wrapper"
    style={
      Object {
        "--local-width": "16.25rem",
      }
    }
  >
    <div
      className="md-combobox-inputSection"
    >
      <Input
        aria-label="md-combobox-input"
        ariaDescribedBy={null}
        ariaLabel={null}
        autoComplete="off"
        className="md-combobox-input"
        clear={false}
        clearAriaLabel={null}
        containerSize=""
        defaultValue=""
        disabled={false}
        helpText=""
        htmlId={null}
        id={null}
        inputAfter={null}
        inputBefore={null}
        inputClassName=""
        inputRef={[Function]}
        inputSize=""
        isFilled={false}
        label=""
        messageArr={Array []}
        multiline={false}
        name={null}
        nestedLevel={0}
        onChange={[Function]}
        onDoneEditing={null}
        onFocus={null}
        onKeyDown={null}
        onMouseDown={null}
        placeholder="Combobox"
        readOnly={false}
        secondaryLabel=""
        shape=""
        type="text"
        value=""
      >
        <div
          className="md-input-container md-combobox-input"
        >
          <div
            className="md-input__wrapper"
          >
            <input
              aria-label="md-combobox-input"
              autoComplete="off"
              className="md-input"
              name={null}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              placeholder="Combobox"
              tabIndex={0}
              type="text"
              value=""
            />
          </div>
        </div>
      </Input>
      <div
        className="md-combobox-divider"
      />
      <ButtonPill
        className="md-combobox-button"
        ghost={true}
        onPress={[Function]}
      >
        <ButtonSimple
          className="md-button-pill-wrapper md-combobox-button"
          data-color="primary"
          data-disabled={false}
          data-ghost={true}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          onPress={[Function]}
        >
          <FocusRing>
            <FocusRing
              focusClass="md-focus-ring-wrapper children"
              focusRingClass="md-focus-ring-wrapper children"
            >
              <button
                className="md-button-pill-wrapper md-combobox-button md-button-simple-wrapper"
                data-color="primary"
                data-disabled={false}
                data-ghost={true}
                data-grown={false}
                data-inverted={false}
                data-outline={false}
                data-shallow-disabled={false}
                data-size={40}
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                type="button"
              >
                <Icon
                  className="md-combobox-arrowIcon"
                  name="arrow-down"
                  scale={12}
                  weight="filled"
                >
                  <div
                    className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-combobox-arrowIcon md-icon-no-shrink"
                  >
                    <svg
                      className=""
                      data-autoscale={false}
                      data-scale={12}
                      data-test="arrow-down"
                      fill="currentColor"
                      height="100%"
                      style={Object {}}
                      viewBox="0, 0, 32, 32"
                      width="100%"
                    />
                  </div>
                </Icon>
              </button>
            </FocusRing>
          </FocusRing>
        </ButtonSimple>
      </ButtonPill>
    </div>
  </div>
</Combobox>
`;

exports[`Combobox snapshot should match snapshot with style 1`] = `
<Combobox
  items={
    Array [
      Object {
        "items": Array [
          Object {
            "key": "key1",
            "label": "item1",
          },
          Object {
            "key": "key2",
            "label": "item2",
          },
          Object {
            "key": "key3",
            "label": "item3",
          },
          Object {
            "key": "key4",
            "label": "menu1",
          },
          Object {
            "key": "key5",
            "label": "menu2",
          },
          Object {
            "key": "key6",
            "label": "menu3",
          },
        ],
        "section": "",
      },
    ]
  }
  style={
    Object {
      "color": "pink",
    }
  }
>
  <div
    className="md-combobox-wrapper"
    style={
      Object {
        "--local-width": "16.25rem",
        "color": "pink",
      }
    }
  >
    <div
      className="md-combobox-inputSection"
    >
      <Input
        aria-label="md-combobox-input"
        ariaDescribedBy={null}
        ariaLabel={null}
        autoComplete="off"
        className="md-combobox-input"
        clear={false}
        clearAriaLabel={null}
        containerSize=""
        defaultValue=""
        disabled={false}
        helpText=""
        htmlId={null}
        id={null}
        inputAfter={null}
        inputBefore={null}
        inputClassName=""
        inputRef={[Function]}
        inputSize=""
        isFilled={false}
        label=""
        messageArr={Array []}
        multiline={false}
        name={null}
        nestedLevel={0}
        onChange={[Function]}
        onDoneEditing={null}
        onFocus={null}
        onKeyDown={null}
        onMouseDown={null}
        placeholder="Search or select an option"
        readOnly={false}
        secondaryLabel=""
        shape=""
        type="text"
        value=""
      >
        <div
          className="md-input-container md-combobox-input"
        >
          <div
            className="md-input__wrapper"
          >
            <input
              aria-label="md-combobox-input"
              autoComplete="off"
              className="md-input"
              name={null}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              placeholder="Search or select an option"
              tabIndex={0}
              type="text"
              value=""
            />
          </div>
        </div>
      </Input>
      <div
        className="md-combobox-divider"
      />
      <ButtonPill
        className="md-combobox-button"
        ghost={true}
        onPress={[Function]}
      >
        <ButtonSimple
          className="md-button-pill-wrapper md-combobox-button"
          data-color="primary"
          data-disabled={false}
          data-ghost={true}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          onPress={[Function]}
        >
          <FocusRing>
            <FocusRing
              focusClass="md-focus-ring-wrapper children"
              focusRingClass="md-focus-ring-wrapper children"
            >
              <button
                className="md-button-pill-wrapper md-combobox-button md-button-simple-wrapper"
                data-color="primary"
                data-disabled={false}
                data-ghost={true}
                data-grown={false}
                data-inverted={false}
                data-outline={false}
                data-shallow-disabled={false}
                data-size={40}
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                type="button"
              >
                <Icon
                  className="md-combobox-arrowIcon"
                  name="arrow-down"
                  scale={12}
                  weight="filled"
                >
                  <div
                    className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-combobox-arrowIcon md-icon-no-shrink"
                  >
                    <svg
                      className=""
                      data-autoscale={false}
                      data-scale={12}
                      data-test="arrow-down"
                      fill="currentColor"
                      height="100%"
                      style={Object {}}
                      viewBox="0, 0, 32, 32"
                      width="100%"
                    />
                  </div>
                </Icon>
              </button>
            </FocusRing>
          </FocusRing>
        </ButtonSimple>
      </ButtonPill>
    </div>
  </div>
</Combobox>
`;

exports[`Combobox snapshot should match snapshot with width 1`] = `
<Combobox
  items={
    Array [
      Object {
        "items": Array [
          Object {
            "key": "key1",
            "label": "item1",
          },
          Object {
            "key": "key2",
            "label": "item2",
          },
          Object {
            "key": "key3",
            "label": "item3",
          },
          Object {
            "key": "key4",
            "label": "menu1",
          },
          Object {
            "key": "key5",
            "label": "menu2",
          },
          Object {
            "key": "key6",
            "label": "menu3",
          },
        ],
        "section": "",
      },
    ]
  }
  width="16rem"
>
  <div
    className="md-combobox-wrapper"
    style={
      Object {
        "--local-width": "16rem",
      }
    }
  >
    <div
      className="md-combobox-inputSection"
    >
      <Input
        aria-label="md-combobox-input"
        ariaDescribedBy={null}
        ariaLabel={null}
        autoComplete="off"
        className="md-combobox-input"
        clear={false}
        clearAriaLabel={null}
        containerSize=""
        defaultValue=""
        disabled={false}
        helpText=""
        htmlId={null}
        id={null}
        inputAfter={null}
        inputBefore={null}
        inputClassName=""
        inputRef={[Function]}
        inputSize=""
        isFilled={false}
        label=""
        messageArr={Array []}
        multiline={false}
        name={null}
        nestedLevel={0}
        onChange={[Function]}
        onDoneEditing={null}
        onFocus={null}
        onKeyDown={null}
        onMouseDown={null}
        placeholder="Search or select an option"
        readOnly={false}
        secondaryLabel=""
        shape=""
        type="text"
        value=""
      >
        <div
          className="md-input-container md-combobox-input"
        >
          <div
            className="md-input__wrapper"
          >
            <input
              aria-label="md-combobox-input"
              autoComplete="off"
              className="md-input"
              name={null}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              placeholder="Search or select an option"
              tabIndex={0}
              type="text"
              value=""
            />
          </div>
        </div>
      </Input>
      <div
        className="md-combobox-divider"
      />
      <ButtonPill
        className="md-combobox-button"
        ghost={true}
        onPress={[Function]}
      >
        <ButtonSimple
          className="md-button-pill-wrapper md-combobox-button"
          data-color="primary"
          data-disabled={false}
          data-ghost={true}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          onPress={[Function]}
        >
          <FocusRing>
            <FocusRing
              focusClass="md-focus-ring-wrapper children"
              focusRingClass="md-focus-ring-wrapper children"
            >
              <button
                className="md-button-pill-wrapper md-combobox-button md-button-simple-wrapper"
                data-color="primary"
                data-disabled={false}
                data-ghost={true}
                data-grown={false}
                data-inverted={false}
                data-outline={false}
                data-shallow-disabled={false}
                data-size={40}
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                type="button"
              >
                <Icon
                  className="md-combobox-arrowIcon"
                  name="arrow-down"
                  scale={12}
                  weight="filled"
                >
                  <div
                    className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-combobox-arrowIcon md-icon-no-shrink"
                  >
                    <svg
                      className=""
                      data-autoscale={false}
                      data-scale={12}
                      data-test="arrow-down"
                      fill="currentColor"
                      height="100%"
                      style={Object {}}
                      viewBox="0, 0, 32, 32"
                      width="100%"
                    />
                  </div>
                </Icon>
              </button>
            </FocusRing>
          </FocusRing>
        </ButtonSimple>
      </ButtonPill>
    </div>
  </div>
</Combobox>
`;

exports[`Combobox snapshot should match snapshot withSection 1`] = `
<Combobox
  items={
    Array [
      Object {
        "items": Array [
          Object {
            "key": "key1",
            "label": "item1",
          },
          Object {
            "key": "key2",
            "label": "item2",
          },
          Object {
            "key": "key3",
            "label": "item3",
          },
          Object {
            "key": "key4",
            "label": "item4",
          },
        ],
        "section": "section1",
      },
      Object {
        "items": Array [
          Object {
            "key": "key5",
            "label": "item5",
          },
          Object {
            "key": "key6",
            "label": "item6",
          },
          Object {
            "key": "key7",
            "label": "item7",
          },
          Object {
            "key": "key8",
            "label": "item8",
          },
        ],
        "section": "section2",
      },
    ]
  }
>
  <div
    className="md-combobox-wrapper"
    style={
      Object {
        "--local-width": "16.25rem",
      }
    }
  >
    <div
      className="md-combobox-inputSection"
    >
      <Input
        aria-label="md-combobox-input"
        ariaDescribedBy={null}
        ariaLabel={null}
        autoComplete="off"
        className="md-combobox-input"
        clear={false}
        clearAriaLabel={null}
        containerSize=""
        defaultValue=""
        disabled={false}
        helpText=""
        htmlId={null}
        id={null}
        inputAfter={null}
        inputBefore={null}
        inputClassName=""
        inputRef={[Function]}
        inputSize=""
        isFilled={false}
        label=""
        messageArr={Array []}
        multiline={false}
        name={null}
        nestedLevel={0}
        onChange={[Function]}
        onDoneEditing={null}
        onFocus={null}
        onKeyDown={null}
        onMouseDown={null}
        placeholder="Search or select an option"
        readOnly={false}
        secondaryLabel=""
        shape=""
        type="text"
        value=""
      >
        <div
          className="md-input-container md-combobox-input"
        >
          <div
            className="md-input__wrapper"
          >
            <input
              aria-label="md-combobox-input"
              autoComplete="off"
              className="md-input"
              name={null}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              placeholder="Search or select an option"
              tabIndex={0}
              type="text"
              value=""
            />
          </div>
        </div>
      </Input>
      <div
        className="md-combobox-divider"
      />
      <ButtonPill
        className="md-combobox-button"
        ghost={true}
        onPress={[Function]}
      >
        <ButtonSimple
          className="md-button-pill-wrapper md-combobox-button"
          data-color="primary"
          data-disabled={false}
          data-ghost={true}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          onPress={[Function]}
        >
          <FocusRing>
            <FocusRing
              focusClass="md-focus-ring-wrapper children"
              focusRingClass="md-focus-ring-wrapper children"
            >
              <button
                className="md-button-pill-wrapper md-combobox-button md-button-simple-wrapper"
                data-color="primary"
                data-disabled={false}
                data-ghost={true}
                data-grown={false}
                data-inverted={false}
                data-outline={false}
                data-shallow-disabled={false}
                data-size={40}
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                type="button"
              >
                <Icon
                  className="md-combobox-arrowIcon"
                  name="arrow-down"
                  scale={12}
                  weight="filled"
                >
                  <div
                    className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-combobox-arrowIcon md-icon-no-shrink"
                  >
                    <svg
                      className=""
                      data-autoscale={false}
                      data-scale={12}
                      data-test="arrow-down"
                      fill="currentColor"
                      height="100%"
                      style={Object {}}
                      viewBox="0, 0, 32, 32"
                      width="100%"
                    />
                  </div>
                </Icon>
              </button>
            </FocusRing>
          </FocusRing>
        </ButtonSimple>
      </ButtonPill>
    </div>
  </div>
</Combobox>
`;
